# Amplitude

./: Cargo.toml  LICENSE  README.md
amplitude/: Cargo.toml  README.md
amplitude-derive/: Cargo.toml  README.md
amplitude-derive/examples/: enum.rs
amplitude-derive/src/: expand.rs  lib.rs
amplitude-derive/src/attrs/: mod.rs  symbol.rs
amplitude-derive/src/expand/: ex_enum.rs  ex_struct.rs  mod.rs  prop.rs
amplitude-derive/tests/: 01-empty_struct.rs  02-one_field_struct.rs  03-basic_enum.rs  04-mixed_enum.rs  05-struct_rename_attr.rs  runner.rs
amplitude/src/: lib.rs
amplitude/src/event/: mod.rs
amplitude/src/user/: mod.rs
tracing-amplitude/: Cargo.toml  README.md
tracing-amplitude/src/: filter.rs  lib.rs
