[package]
name = "amplitude-derive"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/runner.rs"

[dependencies]
syn = { version = "2.0.29", features = ["full"] }
quote = "1.0.33"
proc-macro2 = "1.0.66"
amplitude = { path = "../amplitude/" }

[dev-dependencies]
syn = { version = "2.0.29", features = ["full", "extra-traits"] }
trybuild = "1.0.83"
