[package]
name = "tracing-ampli"
version = "0.1.0"
edition = "2021"
license-file = "../LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
amplitude = { path = "../amplitude/" }
tracing = "0.1.37"
tracing-core = "0.1.31"
tracing-subscriber = "0.3.17"
